--- a/main.css
+++ b/main.css
@@ -53,69 +53,42 @@ table {
     text-align: left;
     white-space: nowrap;
 }
-.container {
+body {
     font: 300 14px/26px 'Roboto', sans-serif;
     color: #4B5563;
-    margin: 20px;
-}
-a, th {
-    font-weight: 500;
+    margin: 60px;
 }
 a {
     color: #374151;
-    text-decoration: none;
-}
-header, nav {
-    margin-bottom: 20px;
-}
-.table-outer {
-    overflow-x: auto;
-}
-.table-heading th {
-    background-color: #E5E7EB;
-}
-th {
-    background-color: #F3F4F6;
-}
-th, td {
-    border: 1px solid #FFFFFF;
-    padding: 5px 10px;
+    font-weight: 500;
 }
 h1 {
-    font-size: 23px;
-    line-height: 38px;
+    font-size: 37px;
+    line-height: 61px;
     font-weight: 900;
 }
-.paying td, .paying td a, .withdraw td {
+header, ul, li {
+    margin-bottom: 30px;
+}
+li a {
+    font-size: 18px;
+    line-height: 33px;
+}
+time {
+    display: block;
+}
+.paying a {
     color: #059669;
 }
-.paying td, .withdraw td {
-    background-color: #ECFDF5;
-}
-.scamed td, .scamed td a, .deposit td {
+.scamed a {
     color: #DC2626;
 }
-.scamed td, .deposit td {
-    background-color: #FEF2F2;
+
+@media only screen and (max-width: 460px) {
+    body {
+        margin: 30px 20px;
+    }
 }
-.problem td, .problem td a {
-    color: #D97706;
-}
-.problem td {
-    background-color: #FFFBEB;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
